--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,5 +61,10 @@ dependencies {
     //room
     implementation 'androidx.room:room-runtime:2.3.0'
     kapt 'androidx.room:room-compiler:2.3.0'
+    // datastore
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+    // lifecycle
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
 
 }
